fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -159,136 +159,140 @@ a{
 #gallery{
   display: flex;
   flex-direction: column;
+  width: auto;
 }
 .preview {
     width: 100%;
-  }
-  
-.row {
+}
+.gallery_img{
+  width: 100vw;
+}
+.gallery_row {
     display: flex;
-  }
-  
-  /* Now you want to define what the lightbox will look like. Note that you have the display
-     as none. You don't want it to show until the user clicks on one of the previews. 
-     You will change this display property with JavaScript below. */
-     
-  .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding: 10px 62px 0px 62px;
-    left: 0;
-    top: 0;
+    height: 100%;
+    width: 100%;
+}
+.gallery_col{
     width: 100%;
     height: 100%;
-    overflow: auto;
-    background-color: black;
-     z-index: 20; 
-  }
+}
   
-  .modal-content {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin: auto;
-    padding: 0 0 0 0;
-    width: 80%;
-    max-width: 1200px;
-    height: 80%;
-  }
-  /* Same with your slides, you set the display to none, because you want to choose which 
-     one is shown at a time. */
-  
-  .slide {
-    display: none;
-  }
-  
-  .image-slide {
-    width: 100%;
-  }
-  
-  .modal-preview {
-    width: 100%;
-  }
-  
-  .dots {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  .col{
-      width: auto;
-      height: auto;
-  }
-  
-  /* You want the previews a little transparent to show that they are "inactive". 
-     You then add an .active or :hover class to animate the selections for your user when
-     they interact with your controls and clickable content.
-   */
-  
-  img.preview, img.modal-preview {
-    opacity: 1;
-  }
-  
-  img.active,
-  .preview:hover,
-  .modal-preview:hover {
-    opacity: .6;
-  }
-  
-  img.hover-shadow {
-    transition: 0.3s;
-  }
-  
-  .hover-shadow:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  } 
-  
-  .close {
-    color: rgb(204, 179, 179);
-    position: absolute;
-    top: 10px;
-    right: 150px;
-    font-size: 35px;
-    font-weight: bold;
-    z-index: 110;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #999;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  .previous,
-  .next {
-    align-self: stretch;
-    cursor: pointer;
-    position: absolute;
-    top: 0;
-    width: auto;
-    padding: 387px 30px;
-    margin-top: -50px;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    -webkit-user-select: none;
-  }
-  
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  
-  .previous:hover,
-  .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-  }
+/* Now you want to define what the lightbox will look like. Note that you have the display
+    as none. You don't want it to show until the user clicks on one of the previews. 
+    You will change this display property with JavaScript below. */
+    
+.modal {
+  display: none;
+  position: fixed;
+  padding: 10px 62px 0px 62px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+  z-index: 20; 
+}
+
+.modal-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+  padding: 0 0 0 0;
+  width: 80%;
+  max-width: 1200px;
+  height: 80%;
+}
+/* Same with your slides, you set the display to none, because you want to choose which 
+    one is shown at a time. */
+
+.slide {
+  display: none;
+}
+
+.image-slide {
+  width: 100%;
+}
+
+.modal-preview {
+  width: 100%;
+}
+
+.dots {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+/* You want the previews a little transparent to show that they are "inactive". 
+    You then add an .active or :hover class to animate the selections for your user when
+    they interact with your controls and clickable content.
+  */
+
+img.preview, img.modal-preview {
+  opacity: 1;
+}
+
+img.active,
+.preview:hover,
+.modal-preview:hover {
+  opacity: .6;
+}
+
+img.hover-shadow {
+  transition: 0.3s;
+}
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+} 
+
+.close {
+  color: rgb(204, 179, 179);
+  position: absolute;
+  top: 10px;
+  right: 150px;
+  font-size: 35px;
+  font-weight: bold;
+  z-index: 110;
+}
+
+.close:hover,
+.close:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.previous,
+.next {
+  align-self: stretch;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  width: auto;
+  padding: 387px 30px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.previous:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
 
 
 
@@ -300,7 +304,7 @@ a{
     padding-right: 40px;
     align-items: center;
     justify-content: center;
-    width: 1300px;
+    width: auto;
 }
 .contact_row{
     display: flex;
